# Music-Bot

./: .gitignore  .replit  pyproject.toml  replit.md
.agents/memory/: MEMORY.md  discord-py-voice-davey.md  non-artifact-background-services.md
discord-music-bot/: .env.example  README.md  bot.py  keep_alive.py  requirements.txt
discord-music-bot/cogs/: music.py
discord-music-bot/utils/: lyrics.py  queue_manager.py  ytdl_source.py
