[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.14.1",
    "async-timeout>=5.0.1",
    "discord-py>=2.7.1",
    "flask>=3.1.3",
    "pynacl>=1.6.2",
    "python-dotenv>=1.2.2",
    "yt-dlp>=2026.7.4",
]
